Add required components

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
   <script>
-    window.apiUrl = "http://127.0.0.1:3000";
+    window.apiUrl = "API_URL_PLACEHOLDER";
   </script>
 </html>
